--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,25 @@
 /*  your css code here. If applicable */
+.main{
+	background-color:gray;
+	border-color:1px solid black;
+	border-radius:10px;
+	width:500px;
+}
+#green{
+	background-color:green;
+	
+}
+#yellow{
+	background-color:yellow;
+	
+}
+#red{
+	background-color:red;
+	
+}
+.color{
+	display:flex;
+	text-align:center;
+	
+	border-radius:50%;
+}
